deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fleetpulse
  namespace: fleetpulse
spec:
  ingressClassName: traefik
  rules:
    - host: app.63.176.86.97.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fleetpulse-api
                port: { number: 8000 }
